- Make sure that weekdays deselects weekend, and weekend deselects weekdays in scheduler plugin (225952)
- Don't show 0 KB/s when there is no limit in scheduler plugin (225943)
- Make warning icon when no trackers can be reached, work for non private torrents (227670)
- Reset bandwidth schedule when network comes up again (227423)
- Make sure TOS is set when setting up a connection

Changes in 4.0beta1:
- Make adding multiple trackers at once possible (213194) 
- Bandwidth scheduler can now be deactivated temporarely
- Show information message instead of error when trackerlists are merged (213772)
- Add patch from Leo Trubach which adds support for IP rangs to the IP filter dialog
- Add support for metadata extension
- Remove own flags, now using exclusively those from KDE 
- Add support for reqq parameter in extended handshake
- Ignore diskspace check when it cannot be determined on a gvfs mounted filesystem (187141)
- DHT can no longer be disabled at compile time
- Add support for magnet URL's (214375)
- Fix crash due to uncaught warning 
- Expand open url dialog, it is now possible to open silently and to select the group
- Fix crash when loading magnets file (218227)

Changes in 3.3.4:
- Fix SHA1 hash generation crashes once and for all (222753)
- Check for invalid addresses in reverse resolver, fixes a crash
- Fix sorting bug in choking algorithm
- Fix crash caused by handling exceptions badly (224097)
- Fix bug causing global max share ratio and seed time to override group policy (223745)

Changes in 3.3.3:
- Fix crash caused by 0 pointer in Downloader::saveDownloads (219019)
- Don't remove torrent when jobs are running, wait until they are done, this fixes a crash (218853)
- Disable editing of items in ActivityListModel (219355)
- Make sure checks for ftello and fseeko are done, fixes a problem with large file sizes on BSD (217523)
- Make sure reannounce timer in UDPTracker is always stopped in the stop call (219663)