@@ -27,6 +27,7 @@ Changes in 4.0beta2:
 - Make warning icon when no trackers can be reached, work for non private torrents (227670)
 - Reset bandwidth schedule when network comes up again (227423)
 - Make sure TOS is set when setting up a connection
+- Fix crash in AuthenticationMonitor, caused by dangling pointer (228395)
 
 Changes in 4.0beta1:
 - Make adding multiple trackers at once possible (213194) 
